--- a/octocat.Rmd
+++ b/octocat.Rmd
@@ -16,3 +16,13 @@ ggplot(iris) +
 x <- 5
 ```
 
+```{r}
+iris %>%
+  ggplot() + 
+  aes(x = Petal.Width, 
+      y = Sepal.Width) + 
+  geom_point(shape = 21, 
+             color = "black", 
+             fill = "red")
+```
+
